# py_wise

./: ADVANCED_FEATURES.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: usage_examples.py
py_wise/: __init__.py  cli.py
py_wise/core/: detector.py  docker_gen.py  migrator.py
py_wise/utils/: helpers.py
pywise_pkg/: __init__.py  cli.py
pywise_pkg/core/: migrator.py  resolver.py
pywise_pkg/utils/: helpers.py
tests/: test_advanced.py
